--- a/projeto_agencia_design/src/components/BannerSec/index.css
+++ b/projeto_agencia_design/src/components/BannerSec/index.css
@@ -1,10 +1,41 @@
 .banner-sec {
-    margin-top: 50px;
+    display: flex;
+    max-width: 1024px;
+    margin: 50px auto;
+    margin-bottom: 0;
+    justify-content: center;
 }
 
 .banner-img {
-    width: 50%;
-    height: 100%;
+    max-width: 400px;
+    background-color: #fff;
+}
+.box-banner-img {
     background-image: url('../../assets/banner.png');
-    
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 400px;
+    height: 400px;
+    background-position: bottom;
+}
+
+.banner-text {
+    width: 50%;
+    color: #022144;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.banner-text p{
+    font-size: 12px;
+}
+
+.banner-text h2{
+    font-size: 24px;
+}
+
+.banner-text span{
+    font-size: 24px;
+    font-weight:900;
 }
