--- a/projeto_agencia_design/src/components/Header/index.css
+++ b/projeto_agencia_design/src/components/Header/index.css
@@ -1,5 +1,6 @@
 .header-strip {
     width: 100%;
+    padding: 0px 20px;
     position: fixed;
     height: 50px;
     background-color: #fff;
@@ -10,20 +11,23 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 1024px;
+    width: 100%;
 }
 
 .header-cont img {
-    height: 100%;
+    height: 80%;
+    margin-bottom: 20%;
 }
 
 .header-cont button {
-    height: 40px;
+    height: 50px;
     background-color: #fff;
     border: none;
-    margin-top: 5px;
+    margin-bottom: 20%;
 }
 
 .btnimg {
-    border: #747272;
+    margin-top: 10%;
+    border: #747272 solid 2px;
+    border-radius: 25px;
 }
