--- a/projeto_agencia_design/src/components/BannerSec/index.css
+++ b/projeto_agencia_design/src/components/BannerSec/index.css
@@ -39,3 +39,89 @@
     font-size: 24px;
     font-weight:900;
 }
+
+
+@media screen and (max-width: 768px) {
+    .banner-img {
+        display: none;
+    }
+    .banner-text {
+        margin: 30px auto;
+    }
+    .banner-text p{
+        font-size: 18px;
+    }
+    .banner-text h2 {
+        font-size: 32px;
+    }
+    .banner-text span{
+        font-size: 32px;
+        font-weight:1000;
+    }
+}
+
+/*Dark Theme*/
+.banner-sec-dk {
+    display: flex;
+    width: 100%;
+    margin: 50px auto;
+    margin-bottom: 0;
+    background-color: #fff;
+}
+
+.banner-img-dk {
+    width: 100%;
+    background-color: #1f1b1b;
+    margin-right: 20px;
+}
+.box-banner-img-dk {
+    background-image: url('../../assets/banner.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 400px;
+    height: 400px;
+    background-position: bottom;
+}
+
+.banner-text-dk {
+    width: 100%;
+    color: #022144;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #fff;
+    padding-left: 20px;
+}
+
+.banner-text-dk p{
+    font-size: 12px;
+}
+
+.banner-text-dk h2{
+    font-size: 24px;
+}
+
+.banner-text-dk span{
+    font-size: 24px;
+    font-weight:900;
+}
+
+
+@media screen and (max-width: 768px) {
+    .banner-img-dk {
+        display: none;
+    }
+    .banner-text-dk {
+        margin: 30px auto;
+    }
+    .banner-text-dk p{
+        font-size: 18px;
+    }
+    .banner-text-dk h2 {
+        font-size: 32px;
+    }
+    .banner-text-dk span{
+        font-size: 32px;
+        font-weight:1000;
+    }
+}
