--- a/projeto_agencia_design/src/components/Card/index.css
+++ b/projeto_agencia_design/src/components/Card/index.css
@@ -22,3 +22,43 @@
     margin: 15px 0px;
     font-size: 24px;
 }
+
+@media screen and (max-width: 768px) {
+    .card {
+        width: 90%;
+        max-width: 1024px;
+    }
+}
+
+/*Dark Theme*/
+.card-dk {
+    max-width: 300px;
+    height: 300px;
+    margin: 10px;
+    background-color: #5f5f5f;
+    padding: 10px;
+    border: #edecec solid 1px;
+}
+
+.card-dk:hover {
+    background-color: #febc33;
+    border: #edecec solid 1px;
+}
+
+.card-dk p {
+    color: #e1e3f3;
+    margin: 15px 0px;
+}
+
+.card-dk h2 {
+    color: #e1e3f3;
+    margin: 15px 0px;
+    font-size: 24px;
+}
+
+@media screen and (max-width: 768px) {
+    .card-dk {
+        width: 90%;
+        max-width: 1024px;
+    }
+}
