--- a/projeto_agencia_design/src/components/ExpSec/index.css
+++ b/projeto_agencia_design/src/components/ExpSec/index.css
@@ -34,3 +34,55 @@
     margin: 0 auto;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 768px) {
+    .cards {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+/*Dark Theme*/
+.exp-sec-dk {
+    background-color: #5f5f5f;
+    padding: 40px 10px;
+}
+
+.text-cont-exp-dk {
+    text-align: center;
+    max-width: 512px;
+    margin: 40px auto;
+}
+
+.text-cont-exp-dk h2 {
+    color: #e1e3f3;
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+
+.text-cont-exp-dk h2::after {
+    content:'';
+    display: block;
+    margin: 20px auto;
+    width: 20%;
+    height: 2px;
+    background-color: yellow;    
+}
+
+.text-cont-exp-dk p {
+    color: #e1e3f3;
+}
+
+.cards-dk {
+    display: flex;
+    max-width: 1024px;
+    margin: 0 auto;
+    justify-content: space-between;
+}
+
+@media screen and (max-width: 768px) {
+    .cards-dk {
+        flex-direction: column;
+        align-items: center;
+    }
+}
